# GrowthApp

./: .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
apps/api/: Dockerfile  Dockerfile.dev  alembic.ini  customerflow_dev.db  customerflow_preview.db  customerflow_test.db  growthapp_dev.db  growthapp_preview.db  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_initial_schema.py  002_add_2fa_to_users.py  003_rls_and_numbering.py  004_phase1_tasks_notifications_authnz.py  005_phase2_ai.py  006_phase3_outreach.py  007_phase3_landing_pages.py  008_referrals.py  009_ai_scraper.py  (+39 more)
apps/api/app/: main.py
apps/api/scripts/: create_tenant_owner.py  ensure_superadmin.py  init_db.py  seed_data.py  seed_garage_addons.py  test_login.py  test_tables.py
apps/api/tests/: conftest.py  test_accounting.py  test_addons_entitlement.py  test_admin.py  test_admin_user_delete.py  test_ai_scraper_phase1.py  test_audit.py  test_auth.py  test_automation.py  test_booking_enterprise.py  test_booking_production.py  test_booking_widget_forms.py  test_config.py  test_crm_enterprise.py  test_crm_enterprise_integration.py  test_customer_broadcast_pwa.py  test_customer_profile_fields.py  test_customer_wallet_notifications.py  test_gdpr.py  test_industry_salon_garage.py  test_integrations_tenant_oauth.py  test_invoice_recurrency.py  test_loyalty_purchase_earn.py  test_membership_rewards.py  test_membership_rewards_enroll.py  test_membership_rewards_integration.py  test_membership_rewards_phase2.py  test_membership_rewards_phase3.py  test_membership_rewards_phase3_dashboard.py  test_membership_rewards_phase4.py  test_membership_rewards_phase5.py  test_membership_rewards_phase6.py  test_membership_rewards_phase7.py  test_membership_rewards_phase8.py  test_numbering.py  test_public_flows.py  test_quotes_invoices_crud.py  test_ratelimit.py  test_rls.py  test_webhooks.py
apps/worker/: Dockerfile  README.md  pyproject.toml
(+845 files in other folders)
