[project]
name = "customerflow-api"
version = "0.1.0"
description = "CustomerFlow AI — FastAPI Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "gunicorn>=22.0.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "pydantic[email]>=2.7.0",
    "argon2-cffi>=23.1.0",
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.27.0",
    "slowapi>=0.1.9",
    "python-multipart>=0.0.9",
    "arq>=0.26.1",
    "stripe>=9.9.0",
    "twilio>=9.2.0",
    "resend>=2.3.0",
    "openai>=1.35.0",
    "weasyprint>=62.0",
    "Jinja2>=3.1.4",
    "sentry-sdk[fastapi]>=2.5.0",
    "orjson>=3.10.5",
    "python-dateutil>=2.9.0",
    "pyotp>=2.9.0",
    "aiosqlite>=0.22.1",
    "segno>=1.6.1",
    "pywebpush>=2.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.2",
    "pytest-asyncio>=0.23.7",
    "httpx>=0.27.0",
    "anyio>=4.4.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.2.2",
    "pytest-asyncio>=0.23.7",
    "httpx>=0.27.0",
    "anyio>=4.4.0",
    "ruff>=0.4.8",
    "mypy>=1.10.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
