[project]
name = "customerflow-worker"
version = "0.1.0"
description = "CustomerFlow AI — ARQ Background Worker"
requires-python = ">=3.11"
dependencies = [
    "arq>=0.26.1",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "pydantic-settings>=2.3.0",
    "argon2-cffi>=23.1.0",
    "python-jose[cryptography]>=3.3.0",
    "twilio>=9.2.0",
    "resend>=2.3.0",
    "openai>=1.35.0",
    "stripe>=9.9.0",
    "httpx>=0.27.0",
    "sentry-sdk>=2.5.0",
]

[tool.uv]
dev-dependencies = []
